--- a/ig.ini
+++ b/ig.ini
@@ -3,7 +3,8 @@
 # see comments below for instructions
 
 ig = input/myig.xml
-template = openhie.fhir.template
+#template = openhie.fhir.template # official template (when approved)
+template = openhie-template # local template
 
 
 
