Your comments have no power here

--- a/ig.ini
+++ b/ig.ini
@@ -3,8 +3,12 @@
 # see comments below for instructions
 
 ig = input/myig.xml
-#template = openhie.fhir.template # official template (when approved)
-template = openhie-template # local template
+
+# official template (when approved):
+#template = openhie.fhir.template 
+
+# local template:
+template = openhie-template 
 
 
 
