--- a/input/data/features.yml
+++ b/input/data/features.yml
@@ -1,12 +1,14 @@
 ---
 feedback:
-  active: true
-  formUrl: https://docs.google.com/forms/d/e/1FAIpQLSdFe3PHRfKlbIf1p1WJ3oqTjnMA_BNyaTdmiKTjpu9RYIaBdQ/viewform?usp=pp_url
-  dashboard: https://github.com/openhie/hiv-ig/projects/1
-  parameters:
-  - name: "'entry.1353807103'"
-    value: encodeURIComponent($(document).attr('title'))
-  - name: "'entry.247644557'"
-    value: document.getElementById(id).textContent
-#  - name: "'entry.247644557'"
-#    value: "$(this).attr('id')"
+  - active: true
+    type: "googleform"   
+    label: "Feedback"
+    formUrl: https://docs.google.com/forms/d/e/1FAIpQLSdFe3PHRfKlbIf1p1WJ3oqTjnMA_BNyaTdmiKTjpu9RYIaBdQ/viewform?usp=pp_url
+    dashboard: 
+      label: Issues
+      url: https://github.com/openhie/hiv-ig/projects/1
+    parameters:
+    - fieldId: 1353807103
+      variableName: pageTitle
+    - fieldId: 247644557
+      variableName: sectionName
