update ig.ini to use local template

--- a/ig.ini
+++ b/ig.ini
@@ -8,8 +8,8 @@ ig = input/myig.xml
 #template = openhie.fhir.template 
 
 # local template:
-template = openhie-template 
-
+template = #openhie-template 
+#template = openhie.fhir.template
 
 
 
