--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,14 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./output
           
-          
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v2.3.2
+    
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: ftp.dlptest.com
+          username: dlpuser
+          password: rNrKYTX9g7z3RgJRmxWuGHbeu          
           
         
