updates - add value sets, fix some issues

--- a/ig.ini
+++ b/ig.ini
@@ -2,7 +2,7 @@
 # ini file for the Implementation Guide publisher
 # see comments below for instructions
 
-ig = input/myig.xml
+ig = input/hiv-casereporting.xml
 
 # official template (when approved):
 #template = openhie.fhir.template 
