--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ temp
 template
 output
 fsh-generated
-input-cache/
+input-cache
 
 # Don't commit this because it's so large #
 ###########################################
