--- a/ig.ini
+++ b/ig.ini
@@ -8,8 +8,8 @@ ig = input/hiv-casereporting.xml
 #template = openhie.fhir.template 
 
 # local template:
-template = #openhie-template 
-#template = openhie.fhir.template 
+#template = #openhie-template 
+template = openhie.fhir.template 
 
 
 
