--- a/ig.ini
+++ b/ig.ini
@@ -5,11 +5,10 @@
 ig = input/hiv-casereporting.xml
 
 # official template (when approved):
-#template = openhie.fhir.template 
+template = openhie.fhir.template 
 
 # local template:
-template = #openhie-template 
-#template = openhie.fhir.template 
+#template = #openhie-template 
 
 
 
