--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,14 @@ on:
       - master
       - draft
       - candidate
+     - jembi-contrib
   pull_request:
     branches: 
       - main
       - master
       - draft
       - candidate
+      - jembi-contrib
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
