--- a/ig.ini
+++ b/ig.ini
@@ -2,7 +2,7 @@
 # ini file for the Implementation Guide publisher
 # see comments below for instructions
 
-ig = input/myig.xml
+ig = input/hiv-casereporting.xml
 #template = openhie.fhir.template
 template = #local-template
 
@@ -14,7 +14,7 @@ template = #local-template
 
 #   ig: the name of the implementation guide resource file.
 examples:
-# ig = input/myig.xml
+# ig = input/hiv-casereporting.xml
 # ig = input/implementationguide-example2.xml
 
 #   template: the IG template that will be used to create the implementation guide (normally be a package name, but can be a local folder).
