--- a/ig.ini
+++ b/ig.ini
@@ -5,7 +5,7 @@
 ig = input/hiv-casereporting.xml
 
 # official template (when approved):
-template = openhie.fhir.template 
+template = openhie.fhir.template#current
 
 # local template:
 #template = #openhie-template 
