--- a/ig.ini
+++ b/ig.ini
@@ -3,8 +3,8 @@
 # see comments below for instructions
 
 ig = input/hiv-casereporting.xml
-#template = openhie.fhir.template
-template = #local-template
+template = openhie.fhir.template#current
+#template = #local-template
 
 
 
